[package]
name = "rtree_rs"
version = "0.1.2"
authors = ["Josh Baker <joshbaker77@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tidwall/rtree.rs"
documentation = "https://docs.rs/rtree_rs/"
description = "R-tree for Rust"

[lib]
doctest = false

[dependencies]
pqueue = "0.1"

[dev-dependencies]
rand = "0.8"
